[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Enemies/big devil.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Actors/Lil Devil.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/HealthBar.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.826, 8.6789 )

[sub_resource type="CircleShape2D" id=2]
radius = 63.6797

[sub_resource type="CircleShape2D" id=3]
radius = 98.8288

[sub_resource type="Animation" id=4]
resource_name = "Attack"
length = 0.9

[sub_resource type="Animation" id=5]
resource_name = "Die"
length = 0.6

[sub_resource type="Animation" id=6]
resource_name = "Hurt"
length = 0.4
loop = true

[sub_resource type="Animation" id=7]
length = 0.6

[sub_resource type="Animation" id=8]
length = 0.3

[node name="Lil Devil" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = -10.041
margin_top = -15.566
margin_right = -10.041
margin_bottom = -15.566
rect_scale = Vector2( 0.2, 0.2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 3.455 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Wzrok" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wzrok"]
position = Vector2( 0, 3.375 )
shape = SubResource( 2 )

[node name="Atak" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Atak"]
position = Vector2( 0, 2.569 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )
anims/Die = SubResource( 5 )
anims/Hurt = SubResource( 6 )
anims/Idle = SubResource( 7 )
anims/Walk = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 2.44 )

[node name="RayCast2D" type="RayCast2D" parent="."]
[connection signal="body_entered" from="Wzrok" to="." method="_on_Wzrok_body_entered"]
[connection signal="body_exited" from="Wzrok" to="." method="_on_Wzrok_body_exited"]
[connection signal="body_entered" from="Atak" to="." method="_on_Atak_body_entered"]
[connection signal="body_exited" from="Atak" to="." method="_on_Atak_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
